@@ -9,6 +9,7 @@
   * Added sbin/renew-certs script to renew service certificates (#507)
   * Add support for GetVersion in pgch (#492)
   * Add a revoke privilege script (#549)
+  * Fix up revoking project lead and operator privileges (#550)
 
 == 1.3.1 ==
  * Add a missing copyright (#544)
